# toolchains

./: .gitmodules  WORKSPACE
esp32/: BUILD.bazel
esp32/idf_as_lib/: CMakeLists.txt
hello_world/: BUILD.bazel
idf_as_lib/: BUILD.bazel
idf_as_lib/main/: main.c
tools/aarch64--glibc--bleeding-edge-2018.07-1/: BUILD
tools/armv7-eabihf--glibc--bleeding-edge-2018.07-1/: BUILD
tools/x86-64-core-i7--glibc--bleeding-edge-2018.07-1/: BUILD
tools/x86-i686--glibc--bleeding-edge-2018.07-1/: BUILD
tools/xtensa-esp32-elf-linux64-1.22.0-80-g6c4433a-5.2.0/: BUILD
tools/xtensa-esp32-elf-linux64-1.22.0-80-g6c4433a-5.2.0/xtensa-esp32-elf/: xtensa-esp32-elf-ar  xtensa-esp32-elf-as  xtensa-esp32-elf-gcc  xtensa-esp32-elf-gcov  xtensa-esp32-elf-ld  xtensa-esp32-elf-nm  xtensa-esp32-elf-objcopy  xtensa-esp32-elf-objdump  xtensa-esp32-elf-strip
