cmake_minimum_required(VERSION 3.5)
project(idf_as_lib C)

# Include for ESP-IDF build system functions
include($ENV{IDF_PATH}/tools/cmake/idf.cmake)
# Create idf::esp32 and idf::freertos static libraries
idf_build_process(esp32
                # try and trim the build; additional components
                # will be included as needed based on dependency tree
                #
                # although esptool_py does not generate static library,
                # processing the component is needed for flashing related
                # targets and file generation
                COMPONENTS esp32 freertos esptool_py
                SDKCONFIG ${CMAKE_BINARY_DIR}/sdkconfig
                BUILD_DIR ${CMAKE_BINARY_DIR})

set(elf_file ${CMAKE_PROJECT_NAME}.elf)

target_link_libraries(${elf_file} idf::esp32 idf::freertos idf::spi_flash)

set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
